Add base headings

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Cameron Walfoort Personal Site</title>
 </head>
 <body>
-    
+    <h1>Cameron Walfoort Personal Site</h1>
+    <h2>Developer, Entrepreneur, Visionary</h2>
+
 </body>
 </html>
